<resources>
    <string name="app_name">PROG7313_POE</string>
    <string name="title_home">Home</string>
    <string name="title_goals">Goals</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_reports">Reports</string>
    <string name="title_categories">Categories</string>
    <string name="addnewgoal">Add New Goal</string>
    <string name="saveTransaction">Save</string>
    <string name="newCategory">New Category</string>
    <string name="back_button_description">Back</string>
    <string name="add_photo">Add Photo</string>

</resources>