<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_goals"
        android:icon="@drawable/clipboard"
        android:title="@string/title_goals" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/title_transactions" />
    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/bar_chart_2"
        android:title="@string/title_reports" />
    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/tag"
        android:title="@string/title_categories" />

</menu>