<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.prog7313_poe.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_goals"
        android:name="com.example.prog7313_poe.ui.goals.GoalsFragment"
        android:label="@string/title_goals"
        tools:layout="@layout/fragment_goals" />

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.example.prog7313_poe.ui.transactions.TransactionsFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transactions" />
    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.example.prog7313_poe.ui.categories.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories">
        <action
            android:id="@+id/action_categories_to_newCategory"
            app:destination="@+id/navigation_new_category"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.example.prog7313_poe.ui.reports.ReportsFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_reports" />
    <fragment
        android:id="@+id/navigation_new_category"
        android:name="com.example.prog7313_poe.ui.categories.NewCategoriesFragment"
        />
</navigation>